--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
 form{
     background-color: var(--white);
     padding: 1rem;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     border-radius: 10px;
     margin: 30px 0;
     width: 92%;
@@ -44,7 +44,7 @@ h2{
     font-weight: 700;
     font-size: 28px;
     padding-bottom: 1rem;
-    border: 1px solid blueviolet;
+    /* border: 1px solid blueviolet; */
 }
 
 
